--- a/week01/index.html
+++ b/week01/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WDD 131 - Dynamic Web Fundamentals - Adetoke Faderin</title>
+    <title>WDD 131 - Dynamic Web Fundamentals - Adebiyi Ademola</title>
     <meta
       name="description"
-      content="WDD 131 - Dynamic Web Fundamentals by Adetoke Faderin. Core learning modules of HTML, CSS, JavaScript."
+      content="WDD 131 - Dynamic Web Fundamentals by Adebiyi Ademola. Core learning modules of HTML, CSS, JavaScript."
     />
-    <meta name="author" content="Adetoke Faderin" />
+    <meta name="author" content="Adebiyi Ademola" />
     <link rel="stylesheet" href="styles/base.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header>
-      <h1>WDD 131: Dynamic Web Fundmentals  Adebiyi Ademola</h1>
+      <h1>WDD 131: Dynamic Web Fundmentals By Adebiyi Ademola</h1>
     </header>
     <nav>
       <ul>
