--- a/week01/index.html
+++ b/week01/index.html
@@ -53,7 +53,7 @@
           <div class="country-description">
             <div>
               <img src="images/flag.png" alt="google images" />
-              <p>Official Flag of Nieria</p>
+              <p>Nigeria flag</p>
             </div>
             <p>
               Nigeria is known to be the giant of africa, it owns one of the
@@ -84,7 +84,7 @@
       </aside>
     </main>
     <footer>
-      <p>©<span id="currentyear"></span> 💕Adebiyi Ademola, Nigeria.💕</p>
+      <p>©<span id="currentyear"></span> 💕Adebiyi Ademola.💕  Nigeria  </p>
       <p id="lastmodified"></p>
     </footer>
     <script src=".//scripts/getdates.js"></script>
