--- a/temples.html
+++ b/temples.html
@@ -51,48 +51,48 @@
       <h2>Home</h2>
       <div class="temples">
         <div class="temple">
-          <img src="images/aba_nigeria_temple_lds.webp" alt="Temple 1" />
+          <img src="images/Aba-nigeria-temple.jpg" alt="Temple 1" />
           <p>Aba Nigeria Temple</p>
         </div>
         <div class="temple">
-          <img src="images/accra_ghana_temple_lds.webp" alt="Temple 2" />
+          <img src="images/Ghana-accra-temple.jpg" alt="Temple 2" />
           <p>Accra Ghana Temple</p>
         </div>
         <div class="temple">
-          <img src="images/anchorage_temple_lds.webp" alt="Temple 3" />
+          <img src="images/Anchorage-alaska-temple.jpg" alt="Temple 3" />
           <p>Anchorage Temple</p>
         </div>
         <div class="temple">
-          <img src="images/apia_samoa_temple_lds.webp" alt="Temple 4" />
+          <img src="images/Apia-samoa-Temple.jpg" alt="Temple 4" />
           <p>Apia Samoa Temple</p>
         </div>
         <div class="temple">
           <img
-            src="images/bentonville_arkansas_temple_exterior.webp"
+            src="images/Bentonville-Arkansas-temple.jpg"
             alt="Temple 5"
           />
           <p>Bentonville Arkansas Temple</p>
         </div>
         <div class="temple">
-          <img src="images/billings_temple_lds.webp" alt="Temple 6" />
+          <img src="images/billings-montana-temple.jpg" alt="Temple 6" />
           <p>Billings Montana Temple</p>
         </div>
         <div class="temple">
-          <img src="images/fort_collins_temple_sunset.webp" alt="Temple 7" />
+          <img src="images/Fort Collins Temple.jpg" alt="Temple 7" />
           <p>Fort Collins Temple</p>
         </div>
         <div class="temple">
-          <img src="images/gilbert_arizona_lds_temple.webp" alt="Temple 8" />
+          <img src="images/The-Gilbert_Arizona_temple.jpg" alt="Temple 8" />
           <p>Gilbert Arizona Temple</p>
         </div>
         <div class="temple">
-          <img src="images/salt_lake_temple_lds.webp" alt="Temple 9" />
+          <img src="images/Salt Lake Temple.jpg" alt="Temple 9" />
           <p>Salt Lake Temple</p>
         </div>
       </div>
     </main>
     <footer>
-      <p>&copy;<span id="currentyear"></span> 🌹Adetoke Faderin🌹 Nigeria.</p>
+      <p>&copy;<span id="currentyear"></span> 🌹Adebiyi Ademola🌹 Nigeria.</p>
       <p id="lastModified"></p>
     </footer>
 
