--- a/images/project/about.html
+++ b/images/project/about.html
@@ -6,9 +6,9 @@
     <title>Zeal Cargo</title>
     <meta
       name="description"
-      content="WDD 131 - Dynamic Fundamentals by Adetoke"
+      content="WDD 131 - Dynamic Fundamentals by Ademola"
     />
-    <meta name="author" content="Adetoke Faderin assignment project" />
+    <meta name="author" content="Adebiyi Ademola assignment project" />
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="stylesheet" href="styles/about.css">
@@ -18,9 +18,9 @@
   <body>
     <header>
       <div class="logo">
-        <img src="images/zealcargologo.webp" alt="Zeal Cargo Logo" />
+        <img src="images/mullainclogo.jpg" alt="MullaInc Cargo Logo" />
         <div class="logo-text">
-          <h1>Zeal Cargo</h1>
+          <h1>MullaInc Cargo</h1>
         </div>
         </div>
       <nav>
@@ -40,7 +40,7 @@
     <main>
      <section class="about">
           <h1>Who We Are...</h1>
-          <p>Zeal Cargo has grown into a gloal logistics powerhouse dedicated to excellence in cargo transport and delivery solutions.</p>
+          <p>MullaInc Cargo has grown into a gloal logistics powerhouse dedicated to excellence in cargo transport and delivery solutions.</p>
           <p>With a passion for innovation, we are committed to making global commerce simpler and more connected.</p>
      </section>
 
@@ -65,14 +65,14 @@
     <footer>
       <section class="footer-content">
         <div class="cargo-info">
-          <p>Zeal Cargo</p>
-          <p>31A Bode Fakunle Street</p>
-          <p>OPIC</p>
-          <p>zealcargo.org</p>
-          <p>(234) 703-2338-813</p>
+          <p>MullaInc Cargo</p>
+          <p>05, Church Street</p>
+          <p>Isheri</p>
+          <p>MullaInc.org</p>
+          <p>(234) 702-5110-563</p>
         </div>
         <div class="footer-info">
-          <p>&copy; <span id="currentyear"></span> Zeal Cargo</p>
+          <p>&copy; <span id="currentyear"></span> MullaInc Cargo</p>
           <p>Last Modification: <span id="lastModified"></span></p>
           <p>Zeal Cargo. All Rights Reserved.</p>
         </div>
