--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -3,32 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Site Plan - Cargo Logistics</title>
+    <title>Site Plan - Mulla Inc.</title>
     <link rel="stylesheet" href="styles/siteplan.css" />
   </head>
   <body>
     <header>
       <div class="logo-container">
-        <img src="images/zealcargologo.webp" alt="" />
+        <img src="images/mullainclogo.jpg" alt="mulla-inc Logo" />
       </div>
-      <h1>Site Plan: Zeal Cargo</h1>
+      <h1>Site Plan: Mulla Inc</h1>
     </header>
 
     <main>  
       <section class="content-section">
         <h2>Site Name</h2>
         <p>
-          <strong>Zeal Cargo</strong> is a professional cargo
+        </strong>mulla-inc Cargo</strong> is a professional cargo
           transportation and Logisitics website providing secure and reliable
           freight services globally.
         </p>
-        <p><em>Domain availability:</em> zealcargo.org</p>
+        <p><em>Domain availability:</em> mullainc.org</p>
       </section>
       
       <section class="content-section">
         <h2>Site Purpose</h2>
         <p>
-          The purpose of Zeal Cargo is to offer a user-friendly platform
+          The purpose of mulla-inc Cargo is to offer a user-friendly platform
           platform where customers can track shipments, request quotes, and learn
           about freight shipping services.
         </p>
@@ -38,7 +38,7 @@
         <h2>Scenarios</h2>
         <ul>
           <li>How can I track my cargo shipment?</li>
-          <li>What shipping services does Zeal Cargo offer?</li>
+          <li>What shipping services does mulla-inc Cargo offer?</li>
         </ul>
       </section>
       
@@ -60,15 +60,15 @@
       <section class="content-section">
         <h2>Wireframe</h2>
         <p>
-          Below is a wireframe representation of the Zeal Cargo homepage:
+          Below is a wireframe representation of the mulla-inc Cargo homepage:
         </p>
-        <img src="images/mobilewireframe.webp" alt="Mobile Wireframe" />
-        <img src="images/" alt="Desktop Wireframe" />
+        <img src="images/images\mobileviewwireframe.jpg" alt="Mobile Wireframe" />
+        <img src="images/images\desktopviewwireframe.jpg" alt="Desktop Wireframe" />
       </section>
     </main>
 
     <footer>
-      <p>&copy; 2025 Zeal Cargo Logistics. All Rights Reserved.</p>
+      <p>&copy; 2025 mulla-inc Cargo Logistics. All Rights Reserved.</p>
     </footer>
   </body>
 </html>
