--- a/images/project/contact.html
+++ b/images/project/contact.html
@@ -6,9 +6,9 @@
     <title>Zeal Cargo</title>
     <meta
       name="description"
-      content="WDD 131 - Dynamic Fundamentals by Adetoke"
+      content="WDD 131 - Dynamic Fundamentals by Ademola"
     />
-    <meta name="author" content="Adetoke Faderin assignment project" />
+    <meta name="author" content="Adebiyi Ademola assignment project" />
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="stylesheet" href="styles/contact.css">
@@ -18,9 +18,9 @@
   <body>
     <header>
       <div class="logo">
-        <img src="images/zealcargologo.webp" alt="Zeal Cargo Logo" />
+        <img src="images/mullainclogo.jpg" alt="MullaInc Cargo Logo" />
         <div class="logo-text">
-          <h1>Zeal Cargo</h1>
+          <h1>MullaInc Cargo</h1>
         </div>
         </div>
       <nav>
@@ -74,16 +74,16 @@
     <footer>
       <section class="footer-content">
         <div class="cargo-info">
-          <p>Zeal Cargo</p>
-          <p>31A Bode Fakunle Street</p>
-          <p>OPIC</p>
-          <p>zealcargo.org</p>
-          <p>(234) 703-2338-813</p>
+          <p>MullaInc Cargo</p>
+          <p>05, church Street</p>
+          <p>Isheri</p>
+          <p>MullaInc.org</p>
+          <p>(234) 702-5110-563</p>
         </div>
         <div class="footer-info">
-          <p>&copy; <span id="currentyear"></span> Zeal Cargo</p>
+          <p>&copy; <span id="currentyear"></span> MullaInc Cargo</p>
           <p>Last Modification: <span id="lastModified"></span></p>
-          <p>Zeal Cargo. All Rights Reserved.</p>
+          <p>MullaIncCargo. All Rights Reserved.</p>
         </div>
       </section>
     </footer>
@@ -118,7 +118,7 @@
       message,
       submittedAt: new Date().toISOString()
     };
-    localStorage.setItem('zealContactData', JSON.stringify(formData));
+    localStorage.setItem('mullaContactData', JSON.stringify(formData));
 
     // Confirmation
     alert('Thanks for reaching out! We’ll get back to you shortly.');
