--- a/project/services.html
+++ b/project/services.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Zeal Cargo</title>
+    <title>MullaInc Cargo</title>
     <meta
       name="description"
-      content="WDD 131 - Dynamic Fundamentals by Adetoke"
+      content="WDD 131 - Dynamic Fundamentals by Ademola"
     />
     <meta name="author" content="Adetoke Faderin assignment project" />
     <link rel="stylesheet" href="styles/base.css">
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="images/zealcargologo.webp" alt="Zeal Cargo Logo" />
+        <img src="images/" alt="Zeal Cargo Logo" />
         <div class="logo-text">
           <h1>Zeal Cargo</h1>
         </div>
