--- a/images/project/index.html
+++ b/images/project/index.html
@@ -6,9 +6,9 @@
     <title>Zeal Cargo</title>
     <meta
       name="description"
-      content="WDD 131 - Dynamic Fundamentals by Adetoke"
+      content="WDD 131 - Dynamic Fundamentals by Ademola"
     />
-    <meta name="author" content="Adetoke Faderin assignment project" />
+    <meta name="author" content="Adebiyi Ademola assignment project" />
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/larger.css">
