--- a/images/project/siteplan.html
+++ b/images/project/siteplan.html
@@ -9,26 +9,26 @@
   <body>
     <header>
       <div class="logo-container">
-        <img src="images/zealcargologo.webp" alt="Zeal Logo" />
+      <img src="images/mullainclogo.jpg" alt="MullaInc Logo"/>
       </div>
-      <h1>Site Plan: Zeal Cargo</h1>
+      <h1>Site Plan: MullaInc Cargo</h1>
     </header>
 
     <main>  
       <section class="content-section">
         <h2>Site Name</h2>
         <p>
-          <strong>Zeal Cargo</strong> is a professional cargo
+          <strong>MullaInc Cargo</strong> is a professional cargo
           transportation and Logisitics website providing secure and reliable
           freight services globally.
         </p>
-        <p><em>Domain availability:</em> zealcargo.org</p>
+        <p><em>Domain availability:</em> MullaInc.org</p>
       </section>
       
       <section class="content-section">
         <h2>Site Purpose</h2>
         <p>
-          The purpose of Zeal Cargo is to offer a user-friendly platform
+          The purpose of MullaInc Cargo is to offer a user-friendly platform
           platform where customers can track shipments, request quotes, and learn
           about freight shipping services.
         </p>
@@ -63,12 +63,12 @@
           Below is a wireframe representation of the Zeal Cargo homepage:
         </p>
         <img src="images/mobilewireframe.webp" alt="Mobile Wireframe" />
-        <img src="images/" alt="Desktop Wireframe" />
+        <img src="images/desktopwireframe.webp" alt="Desktop Wireframe" />
       </section>
     </main>
 
     <footer>
-      <p>&copy; 2025 Zeal Cargo Logistics. All Rights Reserved.</p>
+      <p>&copy; 2025 MullaInc Cargo Logistics. All Rights Reserved.</p>
     </footer>
   </body>
 </html>
