--- a/project/about.html
+++ b/project/about.html
@@ -6,9 +6,9 @@
     <title>Zeal Cargo</title>
     <meta
       name="description"
-      content="WDD 131 - Dynamic Fundamentals by Adetoke"
+      content="WDD 131 - Dynamic Fundamentals by Ademola"
     />
-    <meta name="author" content="Adetoke Faderin assignment project" />
+    <meta name="author" content="Adebiyi Ademola assignment project" />
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="stylesheet" href="styles/about.css">
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="images/zealcargologo.webp" alt="Zeal Cargo Logo" />
+        <img src="images/" alt="Zeal Cargo Logo" />
         <div class="logo-text">
           <h1>Zeal Cargo</h1>
         </div>
