--- a/project/index.html
+++ b/project/index.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="images/zealcargologo.webp" alt="Zeal Cargo Logo" />
+        <img src="images/mullainclogo.jpg" alt="Zeal Cargo Logo" />
         <div class="logo-text">
           <h1>Zeal Cargo</h1>
         </div>
