--- a/images/project/siteplan.html
+++ b/images/project/siteplan.html
@@ -60,10 +60,10 @@
       <section class="content-section">
         <h2>Wireframe</h2>
         <p>
-          Below is a wireframe representation of the Zeal Cargo homepage:
+          Below is a wireframe representation of the MullaInc Cargo homepage:
         </p>
-        <img src="images/mobilewireframe.webp" alt="Mobile Wireframe" />
-        <img src="images/desktopwireframe.webp" alt="Desktop Wireframe" />
+        <img src="images\mobileviewwireframe.jpg" alt="Mobile Wireframe" />
+        <img src="images\desktopviewwireframe.jpg" alt="Desktop Wireframe" />
       </section>
     </main>
 
