--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div class="logo-container">
-        <img src="images/mullainclogo.jpg" alt="mulla-inc Logo" />
+        <img src="" alt="mulla-inc Logo" />
       </div>
       <h1>Site Plan: Mulla Inc</h1>
     </header>
@@ -62,8 +62,8 @@
         <p>
           Below is a wireframe representation of the mulla-inc Cargo homepage:
         </p>
-        <img src="images/images\mobileviewwireframe.jpg" alt="Mobile Wireframe" />
-        <img src="images/images\desktopviewwireframe.jpg" alt="Desktop Wireframe" />
+        <img src="images\mobileviewwireframe.jpg" alt="Mobile Wireframe" />
+        <img src="images\desktopviewwireframe.jpg" alt="Desktop Wireframe" />
       </section>
     </main>
 
