--- a/images/project/services.html
+++ b/images/project/services.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Zeal Cargo</title>
+    <title>MullaInc Cargo</title>
     <meta
       name="description"
       content="WDD 131 - Dynamic Fundamentals by Ademola"
