--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Zeal Cargo</title>
+    <title>MullaInc Cargo</title>
     <meta
       name="description"
-      content="WDD 131 - Dynamic Fundamentals by Adetoke"
+      content="WDD 131 - Dynamic Fundamentals by Ademola"
     />
-    <meta name="author" content="Adetoke Faderin assignment project" />
+    <meta name="author" content="Adebiyi Ademola assignment project" />
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/larger.css">
@@ -18,9 +18,9 @@
   <body>
     <header>
       <div class="logo">
-        <img src="images/zealcargologo.webp" alt="Zeal Cargo Logo" />
+        <img src="images/mullainclogo.jpg" alt="MullaInc Cargo Logo" />
         <div class="logo-text">
-          <h1>Zeal Cargo</h1>
+          <h1>MullaInc Cargo</h1>
         </div>
         </div>
       <nav>
@@ -48,7 +48,7 @@
           <div class="hero-content">
             <h1 class="hero-title">Reliable Cargo. Seamless Delivery.</h1>
             <p class="hero-subtitle">
-              At Zeal Cargo, we move the world forward - one shipment at a time.
+              At MullaInc Cargo, we move the world forward - one shipment at a time.
             </p>
             <a href="services.html" class="cta-button">Learn More</a>
           </div>
@@ -56,7 +56,7 @@
       </section>
 
       <section class="features">
-        <h2>Why Choose Zeal Cargo?</h2>
+        <h2>Why Choose MullaInc Cargo?</h2>
         <div class="features-container">
           <div class="feature-card">
             <h3>Global Network</h3>
@@ -76,16 +76,16 @@
     <footer>
       <section class="footer-content">
         <div class="cargo-info">
-          <p>Zeal Cargo</p>
-          <p>31A Bode Fakunle Street</p>
-          <p>OPIC</p>
-          <p>zealcargo.org</p>
-          <p>(234) 703-2338-813</p>
+          <p>MullaInc Cargo</p>
+          <p>05, church Street</p>
+          <p>Isheri</p>
+          <p>mullainc.org</p>
+          <p>(234) 702-5110-563</p>
         </div>
         <div class="footer-info">
-          <p>&copy; <span id="currentyear"></span> Zeal Cargo</p>
+          <p>&copy; <span id="currentyear"></span> MullaInc Cargo</p>
           <p>Last Modification: <span id="lastModified"></span></p>
-          <p>Zeal Cargo. All Rights Reserved.</p>
+          <p>MullaInc Cargo. All Rights Reserved.</p>
         </div>
       </section>
     </footer>
