--- a/project/index.html
+++ b/project/index.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="images/mullainclogo.jpg" alt="MullaInc Cargo Logo" />
+        <img src="images\mullainclogo.jpg" alt="MullaInc Cargo Logo" />
         <div class="logo-text">
           <h1>MullaInc Cargo</h1>
         </div>
